--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "web-vitals": "^2.1.4",
     "sass": "^1.62.1",
     "axios": "^1.4.0",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "antd": "^5.8.2",
+    "moment": "^2.29.3",
+    "moment-jalaali": "^0.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
